// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectButtonGroup Controlled behavior should render correctly 1`] = `
<SelectButtonGroup
  onChange={[MockFunction]}
  value={
    Array [
      "1",
    ]
  }
>
  <div
    className="SelectButtonGroup"
  >
    <SelectButton
      isBlock={false}
      isEqualWidth={false}
      isSelected={true}
      key="1"
      onChange={[Function]}
      size="normal"
      value="1"
    >
      <div
        className="SelectButton SelectButton--context_brand SelectButton--isSelected"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
      >
        Option 1
      </div>
    </SelectButton>
    <SelectButton
      isBlock={false}
      isEqualWidth={false}
      key="2"
      onChange={[Function]}
      size="normal"
      value="2"
    >
      <div
        className="SelectButton SelectButton--context_brand"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
      >
        Option 2
      </div>
    </SelectButton>
    <SelectButton
      isBlock={false}
      isEqualWidth={false}
      key="3"
      onChange={[Function]}
      size="normal"
      value="3"
    >
      <div
        className="SelectButton SelectButton--context_brand"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
      >
        Option 3
      </div>
    </SelectButton>
  </div>
</SelectButtonGroup>
`;

exports[`SelectButtonGroup should render correctly 1`] = `
<SelectButtonGroup
  defaultValue={
    Array [
      "1",
    ]
  }
  onChange={[MockFunction]}
>
  <div
    className="SelectButtonGroup"
  >
    <SelectButton
      isBlock={false}
      isEqualWidth={false}
      isSelected={true}
      key="1"
      onChange={[Function]}
      size="normal"
      value="1"
    >
      <div
        className="SelectButton SelectButton--context_brand SelectButton--isSelected"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
      >
        Option 1
      </div>
    </SelectButton>
    <SelectButton
      isBlock={false}
      isEqualWidth={false}
      key="2"
      onChange={[Function]}
      size="normal"
      value="2"
    >
      <div
        className="SelectButton SelectButton--context_brand"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
      >
        Option 2
      </div>
    </SelectButton>
    <SelectButton
      isBlock={false}
      isEqualWidth={false}
      key="3"
      onChange={[Function]}
      size="normal"
      value="3"
    >
      <div
        className="SelectButton SelectButton--context_brand"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
      >
        Option 3
      </div>
    </SelectButton>
  </div>
</SelectButtonGroup>
`;
